--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,11 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  share_plus: 10.1.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,9 @@ flutter:
      - assets/tokyo.jpg
      - assets/shimla.jpg
      - assets/kashmir.jpg
+     - assets/post.jpg
+     - assets/location2.jpg
+     - assets/location3.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
